feat: add get users by rolename and roleId api
